--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <title> Web </title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C4ZWXYZ3PH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C4ZWXYZ3PH');
+</script>
 </head>
 <body>
   <h1> <a href="index.html"> Web </a> </h1>
